# mori

.github/workflows/: ci.yml
docker/: Dockerfile.dev
examples/: CMakeLists.txt
examples/shmem/: concurrent_put_thread.cpp
examples/utils/: test_gpu_vmm.cpp  test_vmm_mpi_fd_direct.cpp  test_vmm_mpi_write.cpp
include/mori/application/bootstrap/: local_bootstrap.hpp
include/mori/application/memory/: symmetric_memory.hpp  vmm_va_manager.hpp
include/mori/io/: backend.hpp
include/mori/shmem/: shmem_api.hpp
src/application/: CMakeLists.txt
src/application/bootstrap/: local_bootstrap.cpp
src/application/context/: context.cpp
src/application/memory/: symmetric_memory.cpp  vmm_va_manager.cpp
src/application/transport/rdma/providers/ibverbs/: ibverbs.cpp
src/io/rdma/: backend_impl.cpp  backend_impl.hpp
src/pybind/: mori.cpp
src/shmem/: init.cpp  internal.hpp  memory.cpp
